----------------------------------------------------------------------
Mon May 10 10:46:16 2004                        Michael Jennings (mej)

Added instroot pool to buildtool to save copy/delete time.

Moved some oft-used functionality to Util.pm.
----------------------------------------------------------------------
Mon May 10 10:42:57 2004                        Michael Jennings (mej)

Don't die on STOP signals.
----------------------------------------------------------------------
Mon May 17 21:50:04 2004                        Michael Jennings (mej)

Fixed minor hint installer bug.
----------------------------------------------------------------------
Fri Jun  4 13:15:28 2004                        Michael Jennings (mej)

Lots of stuff here including building a directory full of SPM's.
----------------------------------------------------------------------
Fri Jun  4 16:30:09 2004                        Michael Jennings (mej)

Fixed mid-module import.
----------------------------------------------------------------------
Thu Jun 10 17:04:18 2004                        Michael Jennings (mej)

Fixed several bugs nabbed by Greg Kurtzer <greg@caosity.org>.
----------------------------------------------------------------------
Fri Jun 18 14:09:59 2004                        Michael Jennings (mej)

When importing new packages from SRPM's, always include an initial
ChangeLog entry.  Hopefully this is it for 1.7 final.
----------------------------------------------------------------------
Tue Jun 22 19:03:03 2004                        Michael Jennings (mej)

Here's 1.7-2.  One minor fix which only involved the actual commit
message in the "cvs log."
----------------------------------------------------------------------
Tue Jun 22 19:07:13 2004                        Michael Jennings (mej)

Here's all the new SCM stuff.  Needs more thorough testing, but so far
it Works For Me(tm).  :-)
----------------------------------------------------------------------