@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: buildtool,v 1.188 2004/06/22 23:10:07 mej Exp $
+# $Id: buildtool,v 1.189 2004/06/23 00:21:24 mej Exp $
 #
 
 use strict;
@@ -34,7 +34,6 @@ use Getopt::Long;
 use File::Find;
 use Mezzanine::Util;
 use Mezzanine::Config;
-#use Mezzanine::RevCtl;
 use Mezzanine::PkgVars;
 use Mezzanine::Src;
 use Mezzanine::Pkg;
@@ -55,6 +54,7 @@ my @completed_pkgs;
 my $num_processes;
 my $num_built = 0;
 my @instroot_pool;
+my $scm;
 
 # RPM/SRPM cache data.
 my $rpm_cache;
@@ -141,7 +141,7 @@ fail_package
     push @failed_pkgs, $pkg;
     if ($msg) {
         $msg =~ s/\.+$//;
-        $failure->{$pkg}{MESSAGE} = $msg;
+        $failure->{$pkg}{"MESSAGE"} = $msg;
         eprint "Package \"$pkg\" failed:  $msg.\n";
     } else {
         eprint "Package \"$pkg\" failed with an unknown error.\n";
@@ -157,7 +157,7 @@ update_package_list
 
     @{$parray} = ();
     foreach my $pkg (@p) {
-        next if ($pkgs->{$pkg}{TYPE} eq "image");
+        next if ($pkgs->{$pkg}{"TYPE"} eq "image");
         if (!grep($_ eq $pkg, @failed_pkgs)) {
             push @{$parray}, $pkg;
         }
@@ -340,15 +340,15 @@ build_single_package
     # Binaries or not, we need to know the full path and name of the source package.
     dprintf("Building $pkg in %s.\n", &pkgvar_topdir());
     &pkgvar_name($pkg);
-    if (! ($pkgfile = &pkgvar_filename($pkgs->{$pkg}{MODULE}, $pkgs->{$pkg}{FILENAME}))) {
+    if (! ($pkgfile = &pkgvar_filename($pkgs->{$pkg}{"MODULE"}, $pkgs->{$pkg}{"FILENAME"}))) {
         &fail_package($pkg, "I don't know what file/module to build from!");
         return MEZZANINE_NO_SOURCES;
     }
 
     # If there are binaries, no point in trying to build source.
-    if ($pkgs->{$pkg}{BINS}) {
-        $outfiles = join(' ', &pkgvar_filename(), @{$pkgs->{$pkg}{BINS}});
-    } elsif ($pkgs->{$pkg}{TYPE} eq "rpm") {
+    if ($pkgs->{$pkg}{"BINS"}) {
+        $outfiles = join(' ', &pkgvar_filename(), @{$pkgs->{$pkg}{"BINS"}});
+    } elsif ($pkgs->{$pkg}{"TYPE"} eq "rpm") {
         $outfiles = &pkgvar_filename();
     } elsif (&is_build_needed()) {
         # Build the source
@@ -420,7 +420,7 @@ build_single_package
             &fail_package($pkg, "Big huge messy caching foul-up occured");
         }
     }
-    $err = &place_package_files($pkg, $outfiles, $pkgs->{$pkg}{LOCATIONS});
+    $err = &place_package_files($pkg, $outfiles, $pkgs->{$pkg}{"LOCATIONS"});
     return $err if ($err != MEZZANINE_SUCCESS);
     &complete_package($pkg);
     return MEZZANINE_SUCCESS;
@@ -532,41 +532,53 @@ sub
 download_packages
 {
     my @packages = @_;
-    my ($line, $err, $msg);
+    my ($line, $err, $msg, $package_scm);
 
     nprint "Downloading packages, please wait..." if (! &debug_get());
     foreach my $pkg (@packages) {
         my ($files, $tag);
 
         $err = 0;
-        $files = &pkgvar_filename($pkgs->{$pkg}{MODULE}, $pkgs->{$pkg}{FILENAME});
-        if (defined($pkgs->{$pkg}{BINS})) {
-            $files = join(' ', $files, @{$pkgs->{$pkg}{BINS}});
+        $files = &pkgvar_filename($pkgs->{$pkg}{"MODULE"}, $pkgs->{$pkg}{"FILENAME"});
+        if (defined($pkgs->{$pkg}{"BINS"})) {
+            $files = join(' ', $files, @{$pkgs->{$pkg}{"BINS"}});
         }
         &pkgvar_filename($files);
 
 	# Set the proper REPOSITORY and tag for the checkout.
-        
         if ($global_tree) {
-            &revctl_repository($global_tree);
-        } elsif ($pkgs->{$pkg}{REPOSITORY}) {
-            &revctl_repository($pkgs->{$pkg}{REPOSITORY});
+            $package_scm = Mezzanine::SCM->new($scm->propget("type"));
+            $package_scm->propset("repository", $scm->propget("repository"));
+        } elsif ($pkgs->{$pkg}{"REPOSITORY"}) {
+            $package_scm = Mezzanine::SCM->auto_detect($pkgs->{$pkg}{"REPOSITORY"});
+            if ($package_scm) {
+                my @tmp;
+
+                @tmp = $package_scm->parse_repository_path($pkgs->{$pkg}{"REPOSITORY"});
+                if (scalar(@tmp) && defined($tmp[0])) {
+                    $package_scm->compose_repository_path(@tmp);
+                } else {
+                    $package_scm->propset("repository", $pkgs->{$pkg}{"REPOSITORY"});
+                }
+            } elsif ($scm && $scm->propget("repository")) {
+                $package_scm->propset("repository", $scm->propget("repository"));
+            } else {
+                # FIXME:  What to do??
+            }
         } else {
-            &revctl_repository("");
+            # FIXME:  What to do??
         }
         if ($global_user) {
-            my $repository;
+            my @tmp;
 
-            $repository = &revctl_repository();
-            $repository =~ s/\w+\@/$global_user\@/;
-            &revctl_repository($repository);
+            @tmp = $package_scm->parse_repository_path();
+            $tmp[1] = $global_user;
+            $package_scm->compose_repository_path(@tmp);
         }
         if ($global_tag) {
-            &revctl_tag(($global_tag eq "head") ? "" : $global_tag);
-        } elsif ($pkgs->{$pkg}{TAG}) {
-            &revctl_tag(($pkgs->{$pkg}{TAG} eq "head") ? "" : $pkgs->{$pkg}{TAG});
-        } else {
-            &revctl_tag("");
+            $package_scm->propset("source_tag", $global_tag);
+        } elsif ($pkgs->{$pkg}{"TAG"}) {
+            $package_scm->propset("source_tag", $pkgs->{$pkg}{"TAG"});
         }
 
         nprint "$pkg..." if (! &debug_get());
@@ -647,7 +659,7 @@ place_package_files
                 # Then link it
                 dprint "ln -f $file $dest\n";
                 if (!link($file, $dest)) {
-                    if (exists($!{EXDEV}) && ($!{EXDEV})) {
+                    if (exists($!{"EXDEV"}) && ($!{"EXDEV"})) {
                         # Cross-device link attempt.  Copy instead.
                         if (&copy_files($file, $dest) != 1) {
                             &fail_package($pkg, "Unable to create $dest as a link to $file -- $!");
@@ -949,7 +961,7 @@ summarize_failures
     }
     if ($nf) {
         foreach my $pkg (@failed_pkgs) {
-            if ($failure->{$pkg}{MESSAGE}) {
+            if ($failure->{$pkg}{"MESSAGE"}) {
                 eprint "Package \"$pkg\" failed:  $failure->{$pkg}{MESSAGE}.\n";
                 if ($summary_file) {
                     print SUMMARY "Package \"$pkg\" failed:  $failure->{$pkg}{MESSAGE}.\n";
@@ -984,7 +996,7 @@ main
 
     if ($OPTION{"version"}) {
         &print_version($PROGNAME, $VERSION, "Michael Jennings <mej\@eterm.org>",
-                       'CVS Revision $Revision: 1.188 $ created on $Date: 2004/06/22 23:10:07 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.189 $ created on $Date: 2004/06/23 00:21:24 $ by $Author: mej $ ');
     }
     if ($OPTION{"help"}) {
 	&print_usage_info();
@@ -1034,6 +1046,28 @@ main
     $config->set("CLEAN", &pkgvar_cleanup($OPTION{"clean"} || $config->get("CLEAN") || $config->get("BUILDTREE_LAYOUT")));
     $config->set("TARGET", &pkgvar_target($OPTION{"target"} || $config->get("TARGET") || ""));
     $config->set("REBUILD", $OPTION{"rebuild"} || $config->get("REBUILD") || 0);
+
+    # SCM stuff.
+    $config->set("DEFAULT_SCM", $config->get("DEFAULT_SCM") || "cvs");
+    if ($global_tree) {
+        $scm = Mezzanine::SCM->auto_detect($global_tree);
+        if ($scm) {
+            my @tmp;
+
+            $config->set("DEFAULT_SCM", $scm->propget("type"));
+            @tmp = $scm->parse_repository_path($global_tree);
+            if (scalar(@tmp) && defined($tmp[0])) {
+                dprintf("Parsed repository path into:  \"%s\"\n", join("\", \"", @tmp));
+                $scm->compose_repository_path(@tmp);
+            } else {
+                eprintf("Parse error on %s repository $global_tree\n", $scm->propget("type"));
+                $global_tree = undef;
+            }
+        } else {
+            eprint "Unrecognized repository $global_tree, ignoring.\n";
+            $global_tree = undef;
+        }
+    }
 
     # Handle hint file/directory specification
     $config->set("HINTS", $OPTION{"hints"} || $config->get("HINTS") || $ENV{"MEZZANINE_HINTS"} || "");
